--- a/menu-categories.html
+++ b/menu-categories.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>menu Categories page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link
       href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
-    />
+    >
   </head>
   <body>
     <header>
@@ -39,8 +39,8 @@
             <button
               type="button"
               class="navbar-toggle collapsed"
-              data-toggle="collapse"
-              data-target="#collapsable-nav"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapsable-nav"
               aria-expanded="false"
             >
               <span class="sr-only">Toggle navigation</span>
@@ -55,7 +55,7 @@
               <li class="active">
                 <a href="menu-categories.html"
                   ><span class="glyphicon glyphicon-cutlery"></span
-                  ><br class="hidden-xs" />Menu</a
+                  ><br class="hidden-xs">Menu</a
                 >
               </li>
               <li>
@@ -64,7 +64,7 @@
                     class="glyphicon glyphicon-info-sign"
                     aria-hidden="true"
                   ></span
-                  ><br class="hidden-xs" />About</a
+                  ><br class="hidden-xs">About</a
                 >
               </li>
               <li>
@@ -73,7 +73,7 @@
                     class="glyphicon glyphicon-certificate"
                     aria-hidden="true"
                   ></span
-                  ><br class="hidden-xs" />Awards</a
+                  ><br class="hidden-xs">Awards</a
                 >
               </li>
               <li id="phone" class="hidden-xs">
@@ -203,5 +203,6 @@
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
