--- a/single-categories.html
+++ b/single-categories.html
@@ -39,8 +39,8 @@
             <button
               type="button"
               class="navbar-toggle collapsed"
-              data-toggle="collapse"
-              data-target="#collapsable-nav"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapsable-nav"
               aria-expanded="false"
             >
               <span class="sr-only">Toggle navigation</span>
@@ -244,5 +244,6 @@
 
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
