--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resturant page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -11,11 +11,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
-    />
+    >
+
+    <script src="js/jquery-2.1.4.min.js"></script>
   </head>
   <body>
     <header>
@@ -39,6 +41,7 @@
 
             <button
               type="button"
+              id="navbarToggle"
               class="navbar-toggle collapsed"
               data-bs-toggle="collapse"
               data-bs-target="#collapsable-nav"
@@ -53,10 +56,16 @@
 
           <div class="collapse navbar-collapse" id="collapsable-nav">
             <ul class="nav navbar-nav navbar-right" id="nav-list">
+              <li class="visible-xs active">
+                <a href="index.html"
+                  ><span class="glyphicon glyphicon-home"></span
+                  ><br class="hidden-xs">Home</a
+                >
+              </li>
               <li>
                 <a href="menu-categories.html"
                   ><span class="glyphicon glyphicon-cutlery"></span
-                  ><br class="hidden-xs" />Menu</a
+                  ><br class="hidden-xs">Menu</a
                 >
               </li>
               <li>
@@ -65,7 +74,7 @@
                     class="glyphicon glyphicon-info-sign"
                     aria-hidden="true"
                   ></span
-                  ><br class="hidden-xs" />About</a
+                  ><br class="hidden-xs">About</a
                 >
               </li>
               <li>
@@ -74,7 +83,7 @@
                     class="glyphicon glyphicon-certificate"
                     aria-hidden="true"
                   ></span
-                  ><br class="hidden-xs" />Awards</a
+                  ><br class="hidden-xs">Awards</a
                 >
               </li>
               <li id="phone" class="hidden-xs">
@@ -146,9 +155,10 @@
     </div>
   </footer>
 
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/script.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
