--- a/menu-categories.html
+++ b/menu-categories.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     >
+    <script src="js/jquery-2.1.4.min.js"></script>
   </head>
   <body>
     <header>
@@ -38,6 +39,7 @@
 
             <button
               type="button"
+              id="navbarToggle"
               class="navbar-toggle collapsed"
               data-bs-toggle="collapse"
               data-bs-target="#collapsable-nav"
